--- a/environment.yaml
+++ b/environment.yaml
@@ -2,8 +2,8 @@ name: DataProc
 dependencies:
   - python=3.10
   - pip
-  - matplotlib=3.6.1
-  - numpy=1.23.4
-  - pandas=1.5.1
+  - matplotlib
+  - numpy
+  - pandas
   - pip:
     - pycodestyle
