--- a/.github/workflows/test_program.yaml
+++ b/.github/workflows/test_program.yaml
@@ -30,7 +30,7 @@ jobs:
       - run: |
           pip install -e .
           cd tests/unit
-          python -m unittest test_search_functions
+          python -m unittest test
 
   functional_tests:
     runs-on: ubuntu-latest
@@ -46,4 +46,4 @@ jobs:
       - run: |
           pip install -e .
           cd tests/functional
-          bash run_func_test.sh
+          bash run_functional_testing.sh
